[gd_scene load_steps=37 format=2]

[ext_resource path="res://Scripts/Entities/navigator.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Entities/bigsoldier.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2face_0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2face_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2face_6.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2face_9.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2face_12.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2face_15.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2facetir_0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2facetir_1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2facetir_2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2facetir_3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite270_0.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite270_1.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite270_2.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sprite270_3.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_0.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_1.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_2.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_3.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_4.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_5.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_6.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_7.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_8.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_9.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_10.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_11.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_12.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_13.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Mobs/BigSoldier/sol2faceprep_14.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Other/shadow_0.png" type="Texture" id=32]
[ext_resource path="res://Scenes/Maps/nav2.tres" type="NavigationPolygon" id=33]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "hurt",
"speed": 16.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "prepare",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 153.358

[node name="bigsoldier" type="Node2D"]
script = ExtResource( 1 )

[node name="soldier" type="KinematicBody2D" parent="."]
position = Vector2( 0.307358, 0.614716 )
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="soldier"]
editor/display_folded = true
frames = SubResource( 1 )
frame = 2
playing = true

[node name="Sprite" type="Sprite" parent="soldier/AnimatedSprite"]
position = Vector2( -0.368053, 28.1562 )
texture = ExtResource( 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="soldier"]
position = Vector2( -0.263527, -0.348701 )
shape = SubResource( 2 )

[node name="Hit" type="Timer" parent="soldier"]

[node name="vision" type="Area2D" parent="soldier"]
editor/display_folded = true
collision_layer = 17
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="soldier/vision"]
visible = false
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="soldier"]

[node name="solpos" type="Position2D" parent="soldier"]
position = Vector2( 0.204189, 0.834675 )

[node name="cosmicgoo" type="Area2D" parent="soldier"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="soldier/cosmicgoo"]
position = Vector2( -0.263527, -0.348701 )
shape = SubResource( 2 )

[node name="SoundHit" type="AudioStreamPlayer2D" parent="soldier"]

[node name="navigator" type="Navigation2D" parent="."]
visible = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="navigator"]
navpoly = ExtResource( 33 )

[node name="Timer" type="Timer" parent="."]
[connection signal="animation_finished" from="soldier/AnimatedSprite" to="soldier" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="soldier/Hit" to="soldier" method="_on_Hit_timeout"]
[connection signal="body_entered" from="soldier/vision" to="soldier" method="_on_vision_body_entered"]
[connection signal="timeout" from="soldier/Timer" to="soldier" method="_on_Timer_timeout"]
[connection signal="area_entered" from="soldier/cosmicgoo" to="soldier" method="_on_cosmicgoo_area_entered"]
[connection signal="area_exited" from="soldier/cosmicgoo" to="soldier" method="_on_cosmicgoo_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
